--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -153,7 +153,6 @@ New OSTree:
 .INTEGRATION_TESTS: &INTEGRATION_TESTS
   SCRIPT:
     - koji.sh
-    - libvirt.sh
     - aws.sh
     - azure.sh
     - vmware.sh
@@ -174,14 +173,14 @@ Integration:
           - aws/fedora-33-x86_64
           # See COMPOSER-919
           # - aws/fedora-34-x86_64
-          - openstack/centos-stream-8-x86_64
+          - aws/centos-stream-8-x86_64
       - <<: *INTEGRATION_TESTS
         RUNNER:
           - aws/rhel-8-x86_64
           - aws/rhel-8.4-x86_64
         INTERNAL_NETWORK: ["true"]
       - SCRIPT:
-         - azure_hyperv_gen2.sh
+          - azure_hyperv_gen2.sh
         RUNNER:
           - aws/rhel-8.4-x86_64
         INTERNAL_NETWORK: ["true"]
@@ -190,6 +189,17 @@ Integration:
           - aws/rhel-8-x86_64
         INTERNAL_NETWORK: ["true"]
         DISTRO_CODE: ["rhel_90"]
+      - SCRIPT:
+          - libvirt.sh
+        RUNNER:
+          - aws/fedora-33-x86_64
+          - openstack/centos-stream-8-x86_64
+      - SCRIPT:
+          - libvirt.sh
+        RUNNER:
+          - aws/rhel-8-x86_64
+          - aws/rhel-8.4-x86_64
+        INTERNAL_NETWORK: ["true"]
 
 .API_TESTS: &API_TESTS
   TARGET:
