--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,8 +110,7 @@ Base:
           - aws/centos-stream-8-aarch64
       - RUNNER:
           - aws/rhel-8.4-x86_64
-          # main image types not yet supported in 8.5
-          # - aws/rhel-8.5-x86_64
+          - aws/rhel-8.5-x86_64
           # see COMPOSER-918
           # - aws/rhel-8.4-aarch64
         INTERNAL_NETWORK: ["true"]
