ci: drop rhel 8.4-devel tests
Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,8 +46,6 @@ RPM:
           - aws/centos-stream-8-x86_64
           - aws/centos-stream-8-aarch64
       - RUNNER:
-          - aws/rhel-8.4-x86_64
-          - aws/rhel-8.4-aarch64
           - aws/rhel-8.5-x86_64
           - aws/rhel-8.5-aarch64
         INTERNAL_NETWORK: ["true"]
@@ -105,13 +103,11 @@ Base:
           - aws/rhel-8-aarch64
           - aws/centos-stream-8-x86_64
           - aws/centos-stream-8-aarch64
-      - RUNNER:
-          - aws/rhel-8.4-x86_64
+#      - RUNNER:
           # main image types not yet supported in 8.5
           # - aws/rhel-8.5-x86_64
-          # see COMPOSER-918
-          # - aws/rhel-8.4-aarch64
-        INTERNAL_NETWORK: ["true"]
+          # - aws/rhel-8.5-aarch64
+#        INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
       - journal-log
@@ -177,13 +173,13 @@ Integration:
       - <<: *INTEGRATION_TESTS
         RUNNER:
           - aws/rhel-8-x86_64
-          - aws/rhel-8.4-x86_64
+#          - aws/rhel-8.5-x86_64
         INTERNAL_NETWORK: ["true"]
-      - SCRIPT:
-          - azure_hyperv_gen2.sh
-        RUNNER:
-          - aws/rhel-8.4-x86_64
-        INTERNAL_NETWORK: ["true"]
+#      - SCRIPT:
+#          - azure_hyperv_gen2.sh
+#        RUNNER:
+#          - aws/rhel-8.5-x86_64
+#        INTERNAL_NETWORK: ["true"]
       - <<: *INTEGRATION_TESTS
         RUNNER:
           - aws/rhel-8-x86_64
@@ -198,7 +194,7 @@ Integration:
           - libvirt.sh
         RUNNER:
           - aws/rhel-8-x86_64
-          - aws/rhel-8.4-x86_64
+#          - aws/rhel-8.5-x86_64
         INTERNAL_NETWORK: ["true"]
 
 .API_TESTS: &API_TESTS
@@ -228,7 +224,7 @@ API:
       - <<: *API_TESTS
         RUNNER:
           - aws/rhel-8-x86_64
-          - aws/rhel-8.4-x86_64
+#          - aws/rhel-8.5-x86_64
         INTERNAL_NETWORK: ["true"]
       - <<: *API_TESTS
         RUNNER:
