ci: run only koji.sh for rhel-90 target
Fixes #1461

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -180,11 +180,6 @@ Integration:
 #        RUNNER:
 #          - aws/rhel-8.5-devel-x86_64
 #        INTERNAL_NETWORK: ["true"]
-      - <<: *INTEGRATION_TESTS
-        RUNNER:
-          - aws/rhel-8.4-ga-x86_64
-        INTERNAL_NETWORK: ["true"]
-        DISTRO_CODE: ["rhel-90"]
       - SCRIPT:
           - libvirt.sh
         RUNNER:
@@ -226,11 +221,6 @@ API:
           - aws/rhel-8.4-ga-x86_64
 #          - aws/rhel-8.5-devel-x86_64
         INTERNAL_NETWORK: ["true"]
-      - <<: *API_TESTS
-        RUNNER:
-          - aws/rhel-8.4-ga-x86_64
-        INTERNAL_NETWORK: ["true"]
-        DISTRO_CODE: ["rhel-90"]
 
 NIGHTLY_FAIL:
   stage: finish
@@ -264,6 +254,20 @@ NIGHTLY_SUCCESS:
 #     matrix:
 #       - RUNNER:
 #           - openstack/rhel-8.5-devel-x86_64
+
+RHEL 9 on 8:
+  stage: test
+  extends: .terraform
+  rules:
+    - if: '$CI_PIPELINE_SOURCE != "schedule"'
+  script:
+    - schutzbot/deploy.sh
+    - /usr/libexec/tests/osbuild-composer/koji.sh
+  variables:
+    RUNNER: aws/rhel-8.4-ga-x86_64
+    INTERNAL_NETWORK: "true"
+    DISTRO_CODE: rhel-90
+
 
 finish:
   stage: finish
