Add comments to the config
~ B'ezrat Hashem ~

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,3 +1,7 @@
+# Repo Specific Gitleaks Configuration
+# https://github.com/zricethezav/gitleaks/#configuration
+
+# Set to avoid false positives
 [allowlist]
   description = "Allowlist"
   paths = [
