--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,8 @@ RPM:
           - aws/rhel-8.4-aarch64
           - aws/rhel-8.5-x86_64
           - aws/rhel-8.5-aarch64
+          - aws/rhel-9.0-beta-nightly-x86_64
+          - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
 
 Container:
