--- a/cmd/osbuild-composer/testdata/test.toml
+++ b/cmd/osbuild-composer/testdata/test.toml
@@ -7,5 +7,8 @@ allowed_domains = [ "osbuild.org" ]
 ca = "/etc/osbuild-composer/ca-crt.pem"
 pg_database = "overwrite-me-db"
 
-[weldr_api]
+[weldr_api.distros."*"]
 image_type_denylist = [ "qcow2", "vmdk" ]
+
+[weldr_api.distros.rhel-84]
+image_type_denylist = [ "qcow2" ]
