--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,12 @@
     "dockerfile": "Dockerfile",
     "context": ".."
   },
+  "mounts": [
+    "source=osbuild-share,target=/root/.local/share,type=volume"
+  ],
+  "runArgs": [
+    "--privileged"
+  ],
   "extensions": [
     "laurenttreguier.rpm-spec",
     "golang.Go"
