--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,6 +276,7 @@ API:
         RUNNER:
           - aws/rhel-8-x86_64
           - aws/rhel-8.5-x86_64
+          - aws/rhel-9.0-beta-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
 RHEL 9 on 8:
