--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,36 +85,36 @@ Prepare-rhel-internal:
           - aws/rhel-8.5-x86_64
         INTERNAL_NETWORK: ["true"]
 
-Base:
-  stage: test
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/base_tests.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - aws/fedora-33-x86_64
-          - aws/fedora-33-aarch64
-          # See COMPOSER-919
-          # - aws/fedora-34-x86_64
-          # - aws/fedora-34-aarch64
-          - aws/rhel-8-x86_64
-          - aws/rhel-8-aarch64
-          - aws/centos-stream-8-x86_64
-          - aws/centos-stream-8-aarch64
-      - RUNNER:
-          - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
-        INTERNAL_NETWORK: ["true"]
-  artifacts:
-    paths:
-      - journal-log
-      - "*.repo"
-    when: always
+# Base:
+#   stage: test
+#   extends: .terraform
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE != "schedule"'
+#     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
+#   script:
+#     - schutzbot/deploy.sh
+#     - /usr/libexec/tests/osbuild-composer/base_tests.sh
+#   parallel:
+#     matrix:
+#       - RUNNER:
+#           - aws/fedora-33-x86_64
+#           - aws/fedora-33-aarch64
+#           # See COMPOSER-919
+#           # - aws/fedora-34-x86_64
+#           # - aws/fedora-34-aarch64
+#           - aws/rhel-8-x86_64
+#           - aws/rhel-8-aarch64
+#           - aws/centos-stream-8-x86_64
+#           - aws/centos-stream-8-aarch64
+#       - RUNNER:
+#           - aws/rhel-8.5-x86_64
+#           - aws/rhel-8.5-aarch64
+#         INTERNAL_NETWORK: ["true"]
+#   artifacts:
+#     paths:
+#       - journal-log
+#       - "*.repo"
+#     when: always
 
 Regression:
   stage: test
@@ -143,126 +143,128 @@ Regression:
     paths:
       - journal-log
       - "*.repo"
+      - access_log
+      - error_log
     when: always
 
-OSTree:
-  stage: test
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/fedora-33-x86_64
-          # See COMPOSER-919
-          # - openstack/fedora-34-x86_64
-          - openstack/rhel-8-x86_64
-          - openstack/rhel-8.5-x86_64
+# OSTree:
+#   stage: test
+#   extends: .terraform
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE != "schedule"'
+#     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
+#   script:
+#     - schutzbot/deploy.sh
+#     - /usr/libexec/tests/osbuild-composer/ostree.sh
+#   parallel:
+#     matrix:
+#       - RUNNER:
+#           - openstack/fedora-33-x86_64
+#           # See COMPOSER-919
+#           # - openstack/fedora-34-x86_64
+#           - openstack/rhel-8-x86_64
+#           - openstack/rhel-8.5-x86_64
 
-New OSTree:
-  stage: test
-  extends: OSTree
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-ng.sh
-  parallel:
-    matrix:
-      - RUNNER:
-          - openstack/rhel-8.5-x86_64
+# New OSTree:
+#   stage: test
+#   extends: OSTree
+#   script:
+#     - schutzbot/deploy.sh
+#     - /usr/libexec/tests/osbuild-composer/ostree-ng.sh
+#   parallel:
+#     matrix:
+#       - RUNNER:
+#           - openstack/rhel-8.5-x86_64
 
-.INTEGRATION_TESTS: &INTEGRATION_TESTS
-  SCRIPT:
-    - koji.sh
-    - aws.sh
-    - azure.sh
-    - vmware.sh
-    - filesystem.sh
+# .INTEGRATION_TESTS: &INTEGRATION_TESTS
+#   SCRIPT:
+#     - koji.sh
+#     - aws.sh
+#     - azure.sh
+#     - vmware.sh
+#     - filesystem.sh
 
-Integration:
-  stage: test
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/${SCRIPT}
-  parallel:
-    matrix:
-      - <<: *INTEGRATION_TESTS
-        RUNNER:
-          - aws/fedora-33-x86_64
-          # See COMPOSER-919
-          # - aws/fedora-34-x86_64
-          - aws/centos-stream-8-x86_64
-      - <<: *INTEGRATION_TESTS
-        RUNNER:
-          - aws/rhel-8-x86_64
-          - aws/rhel-8.5-x86_64
-        INTERNAL_NETWORK: ["true"]
-      - SCRIPT:
-          - azure_hyperv_gen2.sh
-        RUNNER:
-          - aws/rhel-8.5-x86_64
-        INTERNAL_NETWORK: ["true"]
-      - SCRIPT:
-          - libvirt.sh
-        RUNNER:
-          - aws/fedora-33-x86_64
-          - openstack/centos-stream-8-x86_64
-      - SCRIPT:
-          - libvirt.sh
-        RUNNER:
-          - aws/rhel-8-x86_64
-          - openstack/rhel-8.5-x86_64
-        INTERNAL_NETWORK: ["true"]
+# Integration:
+#   stage: test
+#   extends: .terraform
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE != "schedule"'
+#     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
+#   script:
+#     - schutzbot/deploy.sh
+#     - /usr/libexec/tests/osbuild-composer/${SCRIPT}
+#   parallel:
+#     matrix:
+#       - <<: *INTEGRATION_TESTS
+#         RUNNER:
+#           - aws/fedora-33-x86_64
+#           # See COMPOSER-919
+#           # - aws/fedora-34-x86_64
+#           - aws/centos-stream-8-x86_64
+#       - <<: *INTEGRATION_TESTS
+#         RUNNER:
+#           - aws/rhel-8-x86_64
+#           - aws/rhel-8.5-x86_64
+#         INTERNAL_NETWORK: ["true"]
+#       - SCRIPT:
+#           - azure_hyperv_gen2.sh
+#         RUNNER:
+#           - aws/rhel-8.5-x86_64
+#         INTERNAL_NETWORK: ["true"]
+#       - SCRIPT:
+#           - libvirt.sh
+#         RUNNER:
+#           - aws/fedora-33-x86_64
+#           - openstack/centos-stream-8-x86_64
+#       - SCRIPT:
+#           - libvirt.sh
+#         RUNNER:
+#           - aws/rhel-8-x86_64
+#           - openstack/rhel-8.5-x86_64
+#         INTERNAL_NETWORK: ["true"]
 
-.API_TESTS: &API_TESTS
-  TARGET:
-    - azure
-    - aws
-    - gcp
-    - aws.s3
+# .API_TESTS: &API_TESTS
+#   TARGET:
+#     - azure
+#     - aws
+#     - gcp
+#     - aws.s3
 
-API:
-  stage: test
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/api.sh ${TARGET}
-  parallel:
-    matrix:
-      - <<: *API_TESTS
-        RUNNER:
-          - aws/fedora-33-x86_64
-          # See COMPOSER-919
-          # - aws/fedora-34-x86_64
-          - aws/centos-stream-8-x86_64
-      - <<: *API_TESTS
-        RUNNER:
-          - aws/rhel-8-x86_64
-          - aws/rhel-8.5-x86_64
-        INTERNAL_NETWORK: ["true"]
+# API:
+#   stage: test
+#   extends: .terraform
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE != "schedule"'
+#     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-x86_64/ && $NIGHTLY == "true"'
+#   script:
+#     - schutzbot/deploy.sh
+#     - /usr/libexec/tests/osbuild-composer/api.sh ${TARGET}
+#   parallel:
+#     matrix:
+#       - <<: *API_TESTS
+#         RUNNER:
+#           - aws/fedora-33-x86_64
+#           # See COMPOSER-919
+#           # - aws/fedora-34-x86_64
+#           - aws/centos-stream-8-x86_64
+#       - <<: *API_TESTS
+#         RUNNER:
+#           - aws/rhel-8-x86_64
+#           - aws/rhel-8.5-x86_64
+#         INTERNAL_NETWORK: ["true"]
 
-RHEL 9 on 8:
-  stage: test
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/koji.sh
-  variables:
-    RUNNER: aws/rhel-8-x86_64
-    INTERNAL_NETWORK: "true"
-    DISTRO_CODE: rhel-90
+# RHEL 9 on 8:
+#   stage: test
+#   extends: .terraform
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE != "schedule"'
+#   script:
+#     - schutzbot/deploy.sh
+#     - /usr/libexec/tests/osbuild-composer/koji.sh
+#   variables:
+#     RUNNER: aws/rhel-8-x86_64
+#     INTERNAL_NETWORK: "true"
+#     DISTRO_CODE: rhel-90
 
 NIGHTLY_FAIL:
   stage: finish
