--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -14,6 +14,9 @@ jobs:
           route: GET /repos/${{ github.repository }}/collaborators/${{ github.event.sender.login }}/permission
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "**** DEBUG: API response=${{ steps.user_permission.outputs.data }}"
+          echo "**** DEBUG: actor='${{ github.actor }}', sender='${{ github.event.sender.login }}'"
 
       # restrict running of tests to users with admin or write permission for the repository
       # see https://docs.github.com/en/free-pro-team@latest/rest/reference/repos#get-repository-permissions-for-a-user
@@ -44,6 +47,8 @@ jobs:
 
       - name: Push to gitlab
         run: |
+          exit 0 
+
           mkdir -p ~/.ssh
           echo "${SCHUTZBOT_SSH_KEY}" > ~/.ssh/id_rsa
           chmod 400 ~/.ssh/id_rsa
