ci: run aws.sh and azure.sh tests on RHEL-9
(cherry picked from commit d3cc8844c537407128ea52c6097d7d17b1e309fb)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -247,6 +247,12 @@ Integration:
           - aws/rhel-8-x86_64
           - openstack/rhel-8.5-x86_64
         INTERNAL_NETWORK: ["true"]
+      - SCRIPT:
+          - aws.sh
+          - azure.sh
+        RUNNER:
+          - aws/rhel-9.0-beta-nightly-x86_64
+        INTERNAL_NETWORK: ["true"]
 
 .API_TESTS: &API_TESTS
   TARGET:
