ci: Make nightly repo/source files multi-arch
the prepare-rhel-internal.sh script should be executed on a single
runner and it will loop through all architectures to prepare the
necessary definitions inside .json and .repo files. The resulting
osbuild-composer-tests repository is not multi-arch, containing all
versions of osbuild-composer-tests.rpm downloaded from Brew.

This is needed because jobs from subsequent stages will download
artifacts (.json & .repo files) from the prepare job but there's no
mechanism to control this easily. As a result artifacts are downloaded
from all of the prepare jobs and they overwrite themselves resulting in
test systems being configured with repo files for different CPU
architecture which leads to dnf errors.

(cherry picked from commit 44c25b7a870e7c380baf77287843300f0ebff8d3)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,8 +82,9 @@ Prepare-rhel-internal:
   parallel:
     matrix:
       - RUNNER:
+          # NOTE: 1 runner prepares for all arches b/c subsequent jobs download
+          # artifacts from all previous jobs and the last one wins
           - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
         INTERNAL_NETWORK: ["true"]
 
 Base:
