--- a/distribution/Dockerfile-ubi
+++ b/distribution/Dockerfile-ubi
@@ -13,6 +13,7 @@ RUN mkdir -p "/etc/osbuild-composer/"
 RUN mkdir -p "/run/osbuild-composer/"
 RUN mkdir -p "/var/cache/osbuild-composer/"
 RUN mkdir -p "/var/lib/osbuild-composer/"
+RUN mkdir -p "/usr/share/osbuild-composer/"
 RUN mkdir -p "/opt/migrate/"
 COPY --from=builder /opt/app-root/src/go/bin/osbuild-composer /usr/libexec/osbuild-composer/
 COPY ./containers/osbuild-composer/entrypoint.py /opt/entrypoint.py
