skip failed job for dependabot
As dependabot pushes directly to the repository (instead of a fork),
gitlab CI gets triggered twice. This change is just for testing
purposes, byt skipping the failed job.

--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -49,7 +49,9 @@ jobs:
           fetch-depth: 0
 
       - name: Push to gitlab
+        if: ${{ github.event.sender.login }} != 'dependabot[bot]'
         run: |
+          echo ${{ github.event.sender.login }}
           mkdir -p ~/.ssh
           echo "${SCHUTZBOT_SSH_KEY}" > ~/.ssh/id_rsa
           chmod 400 ~/.ssh/id_rsa
